crates/kul-layout/tests/snapshots/corpus__example_07_multi_file_extended_family.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 784.0
height: 432.0
cards:
- person_id: ramesh
  kind: canonical
  x: 217.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Ramesh Patel
- person_id: sita
  kind: canonical
  x: 407.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Sita Patel
- person_id: alice
  kind: canonical
  x: 25.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Alice Patel
- person_id: bob
  kind: canonical
  x: 215.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Bob Khan
- person_id: carol
  kind: canonical
  x: 24.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Carol Patel
- person_id: diya
  kind: canonical
  x: 216.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Diya Patel
- person_id: dev
  kind: canonical
  x: 409.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Dev Patel
- person_id: eva
  kind: canonical
  x: 599.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Eva Singh
- person_id: farid
  kind: canonical
  x: 408.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Farid Patel
- person_id: gita
  kind: canonical
  x: 600.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Gita Patel
edges:
- kind: birth
  routing: in_tree
  child_id: alice
  marriage_id: m_ramesh_sita
  points:
  - - 392.0
    - 56.0
  - - 392.0
    - 156.0
  - - 105.0
    - 156.0
  - - 105.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: dev
  marriage_id: m_ramesh_sita
  points:
  - - 392.0
    - 56.0
  - - 392.0
    - 156.0
  - - 489.0
    - 156.0
  - - 489.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: carol
  marriage_id: m_alice_bob
  points:
  - - 200.0
    - 216.0
  - - 200.0
    - 316.0
  - - 104.0
    - 316.0
  - - 104.0
    - 344.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: diya
  marriage_id: m_alice_bob
  points:
  - - 200.0
    - 216.0
  - - 200.0
    - 316.0
  - - 296.0
    - 316.0
  - - 296.0
    - 344.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: farid
  marriage_id: m_dev_eva
  points:
  - - 584.0
    - 216.0
  - - 584.0
    - 316.0
  - - 488.0
    - 316.0
  - - 488.0
    - 344.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: gita
  marriage_id: m_dev_eva
  points:
  - - 584.0
    - 216.0
  - - 584.0
    - 316.0
  - - 680.0
    - 316.0
  - - 680.0
    - 344.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: sita
  marriage_id: m_ramesh_sita
  points:
  - - 377.0
    - 56.0
  - - 407.0
    - 56.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: bob
  marriage_id: m_alice_bob
  points:
  - - 185.0
    - 216.0
  - - 215.0
    - 216.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: eva
  marriage_id: m_dev_eva
  points:
  - - 569.0
    - 216.0
  - - 599.0
    - 216.0
  ended: false
