crates/kul-layout/tests/snapshots/corpus__example_08_divorce_and_remarriage.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 1162.0
height: 272.0
cards:
- person_id: alice
  kind: ghost:past_marriage
  x: 24.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Alice Reyes
- person_id: bob
  kind: ghost:past_marriage
  x: 214.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Bob Singh
- person_id: carol
  kind: canonical
  x: 119.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Carol Singh
- person_id: bob
  kind: canonical
  x: 406.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Bob Singh
- person_id: eva
  kind: canonical
  x: 596.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Eva Larsen
- person_id: felix
  kind: canonical
  x: 501.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Felix Singh
- person_id: alice
  kind: canonical
  x: 788.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Alice Reyes
- person_id: charlie
  kind: canonical
  x: 978.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Charlie Park
- person_id: diana
  kind: canonical
  x: 883.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Diana Park
edges:
- kind: birth
  routing: in_tree
  child_id: carol
  marriage_id: m_alice_bob
  points:
  - - 199.0
    - 56.0
  - - 199.0
    - 156.0
  - - 199.0
    - 156.0
  - - 199.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: felix
  marriage_id: m_bob_eva
  points:
  - - 581.0
    - 56.0
  - - 581.0
    - 156.0
  - - 581.0
    - 156.0
  - - 581.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: diana
  marriage_id: m_alice_charlie
  points:
  - - 963.0
    - 56.0
  - - 963.0
    - 156.0
  - - 963.0
    - 156.0
  - - 963.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: bob
  marriage_id: m_alice_bob
  points:
  - - 184.0
    - 56.0
  - - 214.0
    - 56.0
  ended: true
- kind: marriage
  routing: in_tree
  child_id: eva
  marriage_id: m_bob_eva
  points:
  - - 566.0
    - 56.0
  - - 596.0
    - 56.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: charlie
  marriage_id: m_alice_charlie
  points:
  - - 948.0
    - 56.0
  - - 978.0
    - 56.0
  ended: false
