crates/kul-layout/tests/snapshots/corpus__example_10_disconnected_lineages_and_orphan.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 972.0
height: 272.0
cards:
- person_id: ramesh
  kind: canonical
  x: 24.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Ramesh Iyer
- person_id: sita
  kind: canonical
  x: 214.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Sita Iyer
- person_id: arjun
  kind: canonical
  x: 119.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Arjun Iyer
- person_id: zara
  kind: canonical
  x: 406.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Zara Khan
- person_id: hiro
  kind: canonical
  x: 598.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Hiro Kato
- person_id: yuki
  kind: canonical
  x: 788.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Yuki Kato
- person_id: mei
  kind: canonical
  x: 693.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Mei Kato
edges:
- kind: birth
  routing: in_tree
  child_id: arjun
  marriage_id: m_ramesh_sita
  points:
  - - 199.0
    - 56.0
  - - 199.0
    - 156.0
  - - 199.0
    - 156.0
  - - 199.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: mei
  marriage_id: m_hiro_yuki
  points:
  - - 773.0
    - 56.0
  - - 773.0
    - 156.0
  - - 773.0
    - 156.0
  - - 773.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: sita
  marriage_id: m_ramesh_sita
  points:
  - - 184.0
    - 56.0
  - - 214.0
    - 56.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: yuki
  marriage_id: m_hiro_yuki
  points:
  - - 758.0
    - 56.0
  - - 788.0
    - 56.0
  ended: false
