crates/kul-layout/tests/snapshots/corpus__example_11_cousin_marriage.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 780.0
height: 432.0
cards:
- person_id: govind
  kind: canonical
  x: 215.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Govind Iyer
- person_id: lakshmi
  kind: canonical
  x: 405.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Lakshmi Iyer
- person_id: arjun
  kind: canonical
  x: 24.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Arjun Iyer
- person_id: indira
  kind: canonical
  x: 214.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Indira Iyer
- person_id: maya
  kind: canonical
  x: 24.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Maya Iyer
- person_id: nikhil
  kind: canonical
  x: 214.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Nikhil Iyer
- person_id: bharat
  kind: canonical
  x: 406.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Bharat Iyer
- person_id: janaki
  kind: canonical
  x: 596.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Janaki Iyer
- person_id: nikhil
  kind: ghost:past_birth
  x: 501.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Nikhil Iyer
bars:
- marriage_id: m_govind_lakshmi
  x: 381.0
  y: 51.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_arjun_indira
  x: 190.0
  y: 211.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_maya_nikhil
  x: 190.0
  y: 371.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_bharat_janaki
  x: 572.0
  y: 211.0
  width: 18.0
  height: 10.0
  ended: false
edges:
- kind: birth
  routing: in_tree
  child_id: arjun
  marriage_id: m_govind_lakshmi
  points:
  - - 390.0
    - 61.0
  - - 390.0
    - 156.0
  - - 104.0
    - 156.0
  - - 104.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: bharat
  marriage_id: m_govind_lakshmi
  points:
  - - 390.0
    - 61.0
  - - 390.0
    - 156.0
  - - 486.0
    - 156.0
  - - 486.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: maya
  marriage_id: m_arjun_indira
  points:
  - - 199.0
    - 221.0
  - - 199.0
    - 316.0
  - - 104.0
    - 316.0
  - - 104.0
    - 344.0
- kind: birth
  routing: in_tree
  child_id: nikhil
  marriage_id: m_bharat_janaki
  points:
  - - 581.0
    - 221.0
  - - 581.0
    - 316.0
  - - 581.0
    - 316.0
  - - 581.0
    - 344.0
