crates/kul-layout/tests/snapshots/corpus__example_12_polygamy_with_birth_family.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 592.0
height: 592.0
cards:
- person_id: ramesh
  kind: canonical
  x: 121.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Ramesh Kumar
- person_id: sita
  kind: canonical
  x: 311.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Sita Kumar
- person_id: devraj
  kind: canonical
  x: 216.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Devraj Kumar
- person_id: meera
  kind: canonical
  x: 24.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Meera
- person_id: alice
  kind: canonical
  x: 408.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Alice Sharma
- person_id: priya
  kind: canonical
  x: 312.0
  y: 504.0
  width: 160.0
  height: 64.0
  name: Priya Kumar
bars:
- marriage_id: m_ramesh_sita
  x: 287.0
  y: 51.0
  width: 18.0
  height: 10.0
  ended: false
edges:
- kind: birth
  routing: in_tree
  child_id: devraj
  marriage_id: m_ramesh_sita
  points:
  - - 296.0
    - 61.0
  - - 296.0
    - 156.0
  - - 296.0
    - 156.0
  - - 296.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: priya
  marriage_id: m_devraj_alice
  points:
  - - 392.0
    - 316.0
  - - 392.0
    - 476.0
  - - 392.0
    - 476.0
  - - 392.0
    - 504.0
- kind: marriage
  routing: in_tree
  child_id: meera
  marriage_id: m_devraj_meera
  points:
  - - 296.0
    - 248.0
  - - 296.0
    - 316.0
  - - 104.0
    - 316.0
  - - 104.0
    - 344.0
- kind: marriage
  routing: in_tree
  child_id: alice
  marriage_id: m_devraj_alice
  points:
  - - 296.0
    - 248.0
  - - 296.0
    - 316.0
  - - 488.0
    - 316.0
  - - 488.0
    - 344.0
