crates/kul-layout/tests/snapshots/corpus__example_13_inter_family_marriage.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 780.0
height: 432.0
cards:
- person_id: rajesh
  kind: canonical
  x: 24.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Rajesh Patel
- person_id: saroj
  kind: canonical
  x: 214.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Saroj Patel
- person_id: alice
  kind: canonical
  x: 24.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Alice Patel
- person_id: bob
  kind: canonical
  x: 214.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Bob Sharma
- person_id: mahesh
  kind: canonical
  x: 406.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Mahesh Sharma
- person_id: lata
  kind: canonical
  x: 596.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Lata Sharma
- person_id: kiran
  kind: canonical
  x: 119.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Kiran Patel
bars:
- marriage_id: m_host_parents
  x: 190.0
  y: 51.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_alice_bob
  x: 190.0
  y: 211.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_bob_parents
  x: 572.0
  y: 51.0
  width: 18.0
  height: 10.0
  ended: false
edges:
- kind: birth
  routing: in_tree
  child_id: alice
  marriage_id: m_host_parents
  points:
  - - 199.0
    - 61.0
  - - 199.0
    - 156.0
  - - 104.0
    - 156.0
  - - 104.0
    - 184.0
- kind: birth
  routing: cross_tree
  child_id: bob
  marriage_id: m_bob_parents
  points:
  - - 581.0
    - 61.0
  - - 581.0
    - 156.0
  - - 294.0
    - 156.0
  - - 294.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: kiran
  marriage_id: m_alice_bob
  points:
  - - 199.0
    - 221.0
  - - 199.0
    - 316.0
  - - 199.0
    - 316.0
  - - 199.0
    - 344.0
