crates/kul-layout/tests/snapshots/corpus__example_15_polygamy_with_three_wives.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 1360.0
height: 432.0
cards:
- person_id: devraj
  kind: canonical
  x: 600.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Devraj Kumar
- person_id: meera
  kind: canonical
  x: 24.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Meera
- person_id: alice
  kind: canonical
  x: 792.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Alice Sharma
- person_id: diana
  kind: canonical
  x: 1176.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Diana Roy
- person_id: asha
  kind: canonical
  x: 312.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Asha Kumar
- person_id: priya
  kind: canonical
  x: 696.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Priya Kumar
- person_id: rohan
  kind: canonical
  x: 888.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Rohan Kumar
edges:
- kind: birth
  routing: in_tree
  child_id: asha
  marriage_id: m_devraj_meera
  points:
  - - 392.0
    - 156.0
  - - 392.0
    - 316.0
  - - 392.0
    - 316.0
  - - 392.0
    - 344.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: priya
  marriage_id: m_devraj_alice
  points:
  - - 776.0
    - 156.0
  - - 776.0
    - 316.0
  - - 776.0
    - 316.0
  - - 776.0
    - 344.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: rohan
  marriage_id: m_devraj_diana
  points:
  - - 968.0
    - 156.0
  - - 968.0
    - 316.0
  - - 968.0
    - 316.0
  - - 968.0
    - 344.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: meera
  marriage_id: m_devraj_meera
  points:
  - - 680.0
    - 88.0
  - - 680.0
    - 156.0
  - - 104.0
    - 156.0
  - - 104.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: alice
  marriage_id: m_devraj_alice
  points:
  - - 680.0
    - 88.0
  - - 680.0
    - 156.0
  - - 872.0
    - 156.0
  - - 872.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: diana
  marriage_id: m_devraj_diana
  points:
  - - 680.0
    - 88.0
  - - 680.0
    - 156.0
  - - 1256.0
    - 156.0
  - - 1256.0
    - 184.0
  ended: false
